--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "npx live-server client --host=localhost --port=5500 --no-browser",
-    "serve": "npx json-server server/db/data.json",
+    "serve": "npx json-server server/db/data.json --port=3001",
     "all": "run-p serve start"
   },
   "repository": {
